--- a/client/web/package.json
+++ b/client/web/package.json
@@ -64,7 +64,7 @@
     "@genesislcap/alpha-design-system": "11.4.3",
     "@genesislcap/design-system-configurator": "11.4.3",
     "@genesislcap/foundation-comms": "11.4.3",
-    "@genesislcap/foundation-entity-management": "11.4.3",
+    "@genesislcap/foundation-entity-management": "^14.12.2",
     "@genesislcap/foundation-forms": "11.4.3",
     "@genesislcap/foundation-header": "11.4.3",
     "@genesislcap/foundation-layout": "11.4.3",
